--- a/src/app/components/team/item-team/item-team.component.less
+++ b/src/app/components/team/item-team/item-team.component.less
@@ -20,3 +20,7 @@ app-sponsor-line img {
   max-width: 100%; /* Ensures image does not overflow its container */
   height: auto; /* Maintains aspect ratio */
 }
+
+.age-stats {
+  padding: 5px;
+}
