--- a/src/app/components/tournament/item-tournament/item-tournament.component.less
+++ b/src/app/components/tournament/item-tournament/item-tournament.component.less
@@ -43,14 +43,7 @@ app-sponsor-line img {
   height: auto; /* Maintains aspect ratio */
 }
 
-//.tournament_sponsor_line {
-//  margin-top: 5px;
-//  display: grid;
-//  justify-content: center;
-//  align-items: center;
-//  flex-wrap: nowrap;
-//  //overflow: hidden;
-//  transform-origin: top;
-//  background-color: #ffffff;
-//  width: 100%;
-//}
+.age-stats {
+  padding: 5px;
+}
+
