--- a/src/app/components/tournament/item-tournament/item-tournament.component.html
+++ b/src/app/components/tournament/item-tournament/item-tournament.component.html
@@ -157,6 +157,28 @@
                 @if (allSportPlayersWithPerson$ | async; as playersInSports) {
                   @if (allAvailablePlayersToAddInTournament$ | async;
                     as availablePlayers) {
+                    <span class="age-stats">
+                  Average age:
+                      {{ calculateAgeStats(players)?.average | number:'1.0-0' }}
+                </span>
+                    <span class="age-stats">
+                  Min age:
+                      {{ calculateAgeStats(players)?.min?.years | number:'1.0-0' }} years
+                      {{ calculateAgeStats(players)?.min?.days | number:'1.0-0' }} days
+                  <b>{{ calculateAgeStats(players)?.minPlayer?.first_name | titlecase }}&nbsp;</b>
+                  <b>{{ calculateAgeStats(players)?.minPlayer?.second_name | titlecase }}</b>
+                </span>
+                    <span class="age-stats">
+                  Max age:
+                      {{ calculateAgeStats(players)?.max?.years | number:'1.0-0' }} years
+                      {{ calculateAgeStats(players)?.max?.days | number:'1.0-0' }} days
+                  <b>{{ calculateAgeStats(players)?.maxPlayer?.first_name | titlecase }}&nbsp;</b>
+                  <b>{{ calculateAgeStats(players)?.maxPlayer?.second_name | titlecase }}</b>
+                </span>
+                    <span class="age-stats">
+                  Median age:
+                      {{ calculateAgeStats(players)?.median | number:'1.0-0' }}
+                </span>
                     <app-add-edit-player-to-team-tournament-table
                       [deleteOrUpdate]="'delete'"
                       [sportId]="sport.id!"
