--- a/src/app/components/tournament/item-tournament/item-tournament.component.html
+++ b/src/app/components/tournament/item-tournament/item-tournament.component.html
@@ -157,38 +157,40 @@
                 @if (allSportPlayersWithPerson$ | async; as playersInSports) {
                   @if (allAvailablePlayersToAddInTournament$ | async;
                     as availablePlayers) {
-                    <span class="age-stats">
+                    @if (allPlayersInTournament$| async; as playersInTournament) {
+                      <span class="age-stats">
                   Average age:
-                      {{ calculateAgeStats(players)?.average | number:'1.0-0' }}
+                        {{ calculateAgeStats(playersInTournament)?.average | number:'1.0-0' }}
                 </span>
-                    <span class="age-stats">
+                      <span class="age-stats">
                   Min age:
-                      {{ calculateAgeStats(players)?.min?.years | number:'1.0-0' }} years
-                      {{ calculateAgeStats(players)?.min?.days | number:'1.0-0' }} days
-                  <b>{{ calculateAgeStats(players)?.minPlayer?.first_name | titlecase }}&nbsp;</b>
-                  <b>{{ calculateAgeStats(players)?.minPlayer?.second_name | titlecase }}</b>
+                        {{ calculateAgeStats(playersInTournament)?.min?.years | number:'1.0-0' }} years
+                        {{ calculateAgeStats(playersInTournament)?.min?.days | number:'1.0-0' }} days
+                  <b>{{ calculateAgeStats(playersInTournament)?.minPlayer?.first_name | titlecase }}&nbsp;</b>
+                  <b>{{ calculateAgeStats(playersInTournament)?.minPlayer?.second_name | titlecase }}</b>
                 </span>
-                    <span class="age-stats">
+                      <span class="age-stats">
                   Max age:
-                      {{ calculateAgeStats(players)?.max?.years | number:'1.0-0' }} years
-                      {{ calculateAgeStats(players)?.max?.days | number:'1.0-0' }} days
-                  <b>{{ calculateAgeStats(players)?.maxPlayer?.first_name | titlecase }}&nbsp;</b>
-                  <b>{{ calculateAgeStats(players)?.maxPlayer?.second_name | titlecase }}</b>
+                        {{ calculateAgeStats(playersInTournament)?.max?.years | number:'1.0-0' }} years
+                        {{ calculateAgeStats(playersInTournament)?.max?.days | number:'1.0-0' }} days
+                  <b>{{ calculateAgeStats(playersInTournament)?.maxPlayer?.first_name | titlecase }}&nbsp;</b>
+                  <b>{{ calculateAgeStats(playersInTournament)?.maxPlayer?.second_name | titlecase }}</b>
                 </span>
-                    <span class="age-stats">
+                      <span class="age-stats">
                   Median age:
-                      {{ calculateAgeStats(players)?.median | number:'1.0-0' }}
+                        {{ calculateAgeStats(playersInTournament)?.median | number:'1.0-0' }}
                 </span>
-                    <app-add-edit-player-to-team-tournament-table
-                      [deleteOrUpdate]="'delete'"
-                      [sportId]="sport.id!"
-                      [tournamentId]="tournament.id!"
-                      [teamsInTournament]="teamsInTournament$ | async"
-                      [playersInSport]="playersInSports"
-                      [players]="players"
-                      [availablePlayersInSport]="availablePlayers"
-                      [positions]="allSportPositions$ | async"
-                    ></app-add-edit-player-to-team-tournament-table>
+                      <app-add-edit-player-to-team-tournament-table
+                        [deleteOrUpdate]="'delete'"
+                        [sportId]="sport.id!"
+                        [tournamentId]="tournament.id!"
+                        [teamsInTournament]="teamsInTournament$ | async"
+                        [playersInSport]="playersInSports"
+                        [players]="players"
+                        [availablePlayersInSport]="availablePlayers"
+                        [positions]="allSportPositions$ | async"
+                      ></app-add-edit-player-to-team-tournament-table>
+                    }
                   }
                 }
               }
