russian football display

--- a/src/app/components/match/item-match/item-match.component.html
+++ b/src/app/components/match/item-match/item-match.component.html
@@ -83,6 +83,11 @@
                 </div>
               </div>
             </tui-island>
+            <!--            <div class="one_col_container">-->
+              <!--              <app-qr-->
+              <!--                [url]="'test'"-->
+              <!--              ></app-qr>-->
+              <!--            </div>-->
             <div class="two_col_container_match">
               <div class="one_col_container">
                 <app-body-list-title
