--- a/src/app/shared/scoreboards/scoreboard-display-flat/scoreboard-display-flat.component.html
+++ b/src/app/shared/scoreboards/scoreboard-display-flat/scoreboard-display-flat.component.html
@@ -211,7 +211,8 @@
             [hidden]="!data.scoreboard_data?.is_flag"
             [@visibilityChange]="flagVisibility"
           >
-            <span class="flag-span">FLAG</span>
+            <!--            <span class="flag-span">FLAG</span>-->
+            <span class="flag-span">ФЛАГ</span>
           </div>
         </div>
       </div>
