--- a/src/app/shared/scoreboards/scoreboard-display-flat/scoreboard-display-flat.component.less
+++ b/src/app/shared/scoreboards/scoreboard-display-flat/scoreboard-display-flat.component.less
@@ -259,7 +259,7 @@
   display: grid;
   width: 70px;
   height: 100%;
-
+ 
   letter-spacing: 0.1em;
 
   border-right: 1px solid #bababa;
@@ -273,7 +273,7 @@
 }
 
 .quarter span {
-  font-size: 20px;
+  font-size: 26px;
   font-weight: bold;
   text-transform: uppercase;
 }
@@ -350,7 +350,7 @@
 
 .downandyard-span {
   font-size: 26px;
-  text-transform: uppercase;
+  //text-transform: uppercase;
 }
 
 
