russian football display

--- a/src/app/shared/scoreboards/scoreboard-display-flat/scoreboard-display-flat.component.less
+++ b/src/app/shared/scoreboards/scoreboard-display-flat/scoreboard-display-flat.component.less
@@ -259,7 +259,7 @@
   display: grid;
   width: 70px;
   height: 100%;
- 
+
   letter-spacing: 0.1em;
 
   border-right: 1px solid #bababa;
@@ -364,7 +364,7 @@
 
 .flag, .touchdown {
   position: absolute;
-  top: 0;
+  top: 15px;
   left: 0;
   width: 100%;
   height: 100%;
@@ -379,8 +379,13 @@
   background-color: #e4cd1c;
 }
 
-.flag-span, .touchdown-span {
+.flag-span {
   font-size: 30px;
+  text-transform: uppercase;
+}
+
+.touchdown-span {
+  font-size: 35px;
   text-transform: uppercase;
 }
 
