russian football display

--- a/src/app/shared/scoreboards/admin-forms/down-distance-forms/down-distance-forms.component.html
+++ b/src/app/shared/scoreboards/admin-forms/down-distance-forms/down-distance-forms.component.html
@@ -25,25 +25,25 @@
     <div class="down-selector">
       <app-admin-down-button
         #btnFirstDown
-        [down]="'1ый'"
+        [down]="'1-й'"
         (click)="downValue = btnFirstDown.down; updateFormValue()"
       ></app-admin-down-button>
 
       <app-admin-down-button
         #btnSecondDown
-        [down]="'2ой'"
+        [down]="'2-й'"
         (click)="downValue = btnSecondDown.down; updateFormValue()"
       ></app-admin-down-button>
 
       <app-admin-down-button
         #btnThirdDown
-        [down]="'3ий'"
+        [down]="'3-й'"
         (click)="downValue = btnThirdDown.down; updateFormValue()"
       ></app-admin-down-button>
 
       <app-admin-down-button
         #btnFourthDown
-        [down]="'4ый'"
+        [down]="'4-й'"
         (click)="downValue = btnFourthDown.down; updateFormValue()"
       ></app-admin-down-button>
       <!--      <app-admin-down-button-->
@@ -95,7 +95,7 @@
     <div class="down-dist-selector-game">
       <app-admin-down-button
         #btnFirstAndTen
-        [down]="'1ый'"
+        [down]="'1-й'"
         [distance]="' & 10'"
         (click)="downValue = btnFirstAndTen.down; distanceValue= btnFirstAndTen.distance;  updateFormValue()"
       ></app-admin-down-button>
