--- a/src/app/shared/scoreboards/scoreboard-display-flat/scoreboard-display-flat.component.less
+++ b/src/app/shared/scoreboards/scoreboard-display-flat/scoreboard-display-flat.component.less
@@ -208,10 +208,47 @@
 
 }
 
-.timeout-text,
+//.timeout-text,
+//.timeout-text {
+//  font-family: 'Noto Sans Black', monospace;
+//  font-size: 24px;
+//  text-transform: uppercase;
+//}
+
 .timeout-text {
   font-family: 'Noto Sans Black', monospace;
-  font-size: 20px;
+  font-size: 24px;
+  //text-transform: uppercase;
+  //display: inline-block;
+  //width: 1em; /* Ensures that the box width is consistent */
+  //height: 1em; /* Ensures that the box height is consistent */
+  //line-height: 1em;
+  //text-align: center;
+}
+
+.team-timeout {
+  display: flex;
+  justify-content: center;
+  padding: 5px;
+}
+
+.box {
+  width: 40px;
+  height: 8px;
+  display: inline-block;
+  margin: 2px;
+  border-radius: 2.5px;
+  box-shadow: 0 1px 8px #000;
+}
+
+.black-box {
+  background-color: transparent;
+  border: 1.5px solid #000000;
+}
+
+.white-box {
+  background-color: #ffffff;
+  border: 1.5px solid #000000;
 }
 
 
