--- a/src/app/shared/scoreboards/scoreboard-display-flat/scoreboard-display-flat.component.less
+++ b/src/app/shared/scoreboards/scoreboard-display-flat/scoreboard-display-flat.component.less
@@ -240,14 +240,17 @@
   border-radius: 2.5px;
   box-shadow: 0 1px 8px #000;
   border: 1.5px solid #424242;
+  background-color: #ffffff;
 }
 
 .black-box {
-  background-color: transparent;
+  opacity: 0.35;
+  //background-color: transparent;
 }
 
 .white-box {
-  background-color: #ffffff;
+  opacity: 0.8;
+  //background-color: #ffffff;
 }
 
 
