timout display render with css boxs

--- a/src/app/shared/scoreboards/scoreboard-display-flat/scoreboard-display-flat.component.less
+++ b/src/app/shared/scoreboards/scoreboard-display-flat/scoreboard-display-flat.component.less
@@ -202,33 +202,15 @@
 .team_b-thisgame {
   font-family: 'Noto Sans Black', monospace;
   display: grid;
-  justify-content: center;
-
-  //align-content: center;
-
+  //grid-template-columns: 100%;
+  //grid-template-rows: 100%;
+  justify-content: end;
 }
 
-//.timeout-text,
-//.timeout-text {
-//  font-family: 'Noto Sans Black', monospace;
-//  font-size: 24px;
-//  text-transform: uppercase;
-//}
-
-.timeout-text {
-  font-family: 'Noto Sans Black', monospace;
-  font-size: 24px;
-  //text-transform: uppercase;
-  //display: inline-block;
-  //width: 1em; /* Ensures that the box width is consistent */
-  //height: 1em; /* Ensures that the box height is consistent */
-  //line-height: 1em;
-  //text-align: center;
-}
 
 .team-timeout {
   display: flex;
-  justify-content: center;
+  //justify-items: end;
   padding: 5px;
 }
 
@@ -245,12 +227,10 @@
 
 .black-box {
   opacity: 0.3;
-  //background-color: transparent;
 }
 
 .white-box {
-  opacity: 0.8;
-  //background-color: #ffffff;
+  opacity: 0.81;
 }
 
 
