get match players from essl and dont not updating if in start

--- a/src/app/components/player-match/add-edit-player-match-table/add-edit-player-match-table.component.html
+++ b/src/app/components/player-match/add-edit-player-match-table/add-edit-player-match-table.component.html
@@ -219,7 +219,7 @@
                           as photoUrl) {
                           <tui-avatar
                             size="xl"
-                            text="uploaded logo"
+                            text=""
                             [class]="
                               isRowEnabled(i)
                                 ? 'player-photo-short-profile span-row-3'
