--- a/src/app/shared/ui/dialogs/delete-dialog/delete-dialog.component.html
+++ b/src/app/shared/ui/dialogs/delete-dialog/delete-dialog.component.html
@@ -1,7 +1,7 @@
 <ng-template
   let-observer
   [tuiDialogOptions]="{
-    label: action.toUpperCase() + ' ' + item.toUpperCase() || '' + '?',
+    label: action.toUpperCase() + ' ' + itemUpperCaseTitle(item) + '?',
     size: 'm'
   }"
   [(tuiDialog)]="open"
