--- a/src/app/shared/ui/headermenu/header-menu.component.html
+++ b/src/app/shared/ui/headermenu/header-menu.component.html
@@ -1,32 +1,56 @@
 <nav>
   <div
+    tuiDropdownHover
+    [tuiDropdown]="persons"
   >
-    <a
-      routerLinkActive="active"
-      href="/persons"
-      tuiLink
-      ariaCurrentWhenActive="page"
-    >
-      PERSONS
-    </a>
+    <!--    <a-->
+    <!--      routerLinkActive="active"-->
+    <!--      href="/persons"-->
+    <!--      tuiLink-->
+    <!--      ariaCurrentWhenActive="page"-->
+    <!--    >-->
+    <span class="tui-text_h6">PERSONS</span>
+    <!--    </a>-->
+    <ng-template #persons>
+      <tui-data-list role="menu">
+        <tui-opt-group>
+          <a
+            routerLinkActive="active"
+            href="/persons"
+            tuiOption
+            ariaCurrentWhenActive="page"
+          >
+            PERSONS LIST
+          </a>
+        </tui-opt-group>
+      </tui-data-list>
+    </ng-template>
   </div>
 
   <div
     tuiDropdownHover
     [tuiDropdown]="sponsors"
   >
-    <a
-      routerLinkActive="active"
-      href="/home/adv/sponsors"
-      tuiLink
-      ariaCurrentWhenActive="page"
-    >
-      SPONSORS
-    </a>
+    <!--    <a-->
+    <!--      routerLinkActive="active"-->
+    <!--      href=""-->
+    <!--      tuiLink-->
+    <!--      ariaCurrentWhenActive="page"-->
+    <!--    >-->
+    <span class="tui-text_h6">SPONSORS</span>
+    <!--    </a>-->
   </div>
   <ng-template #sponsors>
     <tui-data-list role="menu">
       <tui-opt-group>
+        <a
+          routerLinkActive="active"
+          href="/home/adv/sponsors"
+          tuiOption
+          ariaCurrentWhenActive="page"
+        >
+          SPONSORS LIST
+        </a>
         <a
           routerLinkActive="active"
           href="/home/adv/sponsors/lines"
@@ -43,18 +67,26 @@
       tuiDropdownHover
       [tuiDropdown]="content"
     >
-      <a
-        routerLinkActive="active"
-        [routerLink]="mapItemToSportRoute(item)"
-        tuiLink
-        ariaCurrentWhenActive="page"
-      >
-        {{ item.title }}
-      </a>
+      <!--      <a-->
+      <!--        routerLinkActive="active"-->
+      <!--        [routerLink]="mapItemToSportRoute(item)"-->
+      <!--        tuiLink-->
+      <!--        ariaCurrentWhenActive="page"-->
+      <!--      >-->
+      <span class="tui-text_h6"> {{ item.title | uppercase }}</span>
+      <!--      </a>-->
     </div>
     <ng-template #content>
       <tui-data-list role="menu">
         <tui-opt-group>
+          <a
+            routerLinkActive="active"
+            [routerLink]="mapItemToSportRoute(item)"
+            tuiOption
+            ariaCurrentWhenActive="page"
+          >
+            TOURNAMENTS
+          </a>
           <a
             routerLinkActive="active"
             [routerLink]="mapItemToTeamsRoute(item)"
