football events forms added to admin

--- a/src/app/shared/scoreboards/admin-forms/all-admin-forms/all-admin-forms.component.html
+++ b/src/app/shared/scoreboards/admin-forms/all-admin-forms/all-admin-forms.component.html
@@ -89,4 +89,8 @@
       (isMatchDataLoading$ | async)! || (isMatchDataSubmitting$ | async)!
     "
   ></app-roster-forms>
+
+  <app-events-forms
+    [eventsFormsVisible$]="eventsFormsVisible$"
+  ></app-events-forms>
 </div>
