football events forms added to admin home away rosters moves to all admin forms

--- a/src/app/shared/scoreboards/admin-forms/all-admin-forms/all-admin-forms.component.html
+++ b/src/app/shared/scoreboards/admin-forms/all-admin-forms/all-admin-forms.component.html
@@ -84,6 +84,8 @@
 
   <app-roster-forms
     [data]="data"
+    [homePlayersInMatch]="homePlayersInMatch$ | async"
+    [awayPlayersInMatch]="awayPlayersInMatch$ | async"
     [rosterFormsVisible$]="rostersFormsVisible$"
     [disabled]="
       (isMatchDataLoading$ | async)! || (isMatchDataSubmitting$ | async)!
