--- a/src/app/shared/scoreboards/admin-forms/all-admin-forms/all-admin-forms.component.html
+++ b/src/app/shared/scoreboards/admin-forms/all-admin-forms/all-admin-forms.component.html
@@ -94,5 +94,8 @@
 
   <app-events-forms
     [eventsFormsVisible$]="eventsFormsVisible$"
+    [events]="allMatchFootballEvents$ | async"
+    [homePlayersInMatch]="homePlayersInMatch$ | async"
+    [awayPlayersInMatch]="awayPlayersInMatch$ | async"
   ></app-events-forms>
 </div>
