football events forms added to admin

--- a/src/app/shared/scoreboards/admin-forms/all-admin-forms/all-admin-forms.component.html
+++ b/src/app/shared/scoreboards/admin-forms/all-admin-forms/all-admin-forms.component.html
@@ -93,6 +93,7 @@
   ></app-roster-forms>
 
   <app-events-forms
+    [data]="data"
     [eventsFormsVisible$]="eventsFormsVisible$"
     [events]="allMatchFootballEvents$ | async"
     [homePlayersInMatch]="homePlayersInMatch$ | async"
