--- a/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.html
+++ b/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.html
@@ -7,42 +7,82 @@
   >
     @if (events && events.length && eventForm && eventsArray && eventsArray.length) {
       <div class="table">
-        <div formArrayName="events" class="table-body">
-          <div
-            *ngFor="let eventFormGroup of eventsArray.controls; let i = index"
-            class="table-row"
-            [formGroupName]="i"
-          >
+        @if (events && events.length) {
+          <div formArrayName="events" class="table-body">
             <div
-              class="table-cell first"
+              *ngFor="let eventFormGroup of eventsArray.controls; let i = index"
+              class="table-row"
+              [formGroupName]="i"
             >
-              @if (getFormDataByIndexAndKey(eventFormGroup, i, 'eventId')) {
-                @if (getFormDataByIndexAndKey(eventFormGroup, i, 'eventNumber'); as number) {
-                  {{ number }}
-                }
-              } @else {
-                <tui-input-number
-                  [formControl]="getFormControl(
+              <div
+                class="table-cell first"
+              >
+                @if (getFormDataByIndexAndKey(eventFormGroup, i, 'eventId')) {
+                  @if (getFormDataByIndexAndKey(eventFormGroup, i, 'eventNumber'); as number) {
+                    {{ number }}
+                  }
+                } @else {
+                  <tui-input-number
+                    [formControl]="getFormControl(
                         this.eventForm,
                         i,
                         'eventNumber',
                         'events'
                       )"
-                ></tui-input-number>
+                  ></tui-input-number>
+                }
+              </div>
+              @if (eventFormGroup.get("eventId" + i)!.value; as id) {
+                <div class="table-cell">
+                  <app-actions-buttons
+                    [id]="id"
+                    [index]="i"
+                    [deleteOrUpdate]="'delete'"
+                    [item]="
+                            getFormDataByIndexAndKey(
+                              eventFormGroup,
+                              i,
+                              'eventNumber'
+                            )
+                          "
+                    (onSubmit)="
+                            onCreateNewEvent($event.action, $event.index, $event.id)
+                          "
+                    (onCancel)="onCancelButtonClick()"
+
+                  ></app-actions-buttons>
+                </div>
+              } @else {
+                <div class="table-cell actions">
+                  <app-actions-buttons
+                    [index]="i"
+                    (onSubmit)="onCreateNewEvent($event.action, $event.index, $event.id)"
+                    (onCancel)="onCancelButtonClick()"
+                  ></app-actions-buttons>
+                </div>
               }
             </div>
-            <div class="table-cell">
-              <app-actions-buttons
-                [index]="i"
-                (onSubmit)="onCreateNewEvent($event.action, $event.index, $event.id)"
-                (onCancel)="onCancelButtonClick()"
-              ></app-actions-buttons>
-            </div>
           </div>
-        </div>
+          @if (!events.length ||
+          events[events.length - 1].id !== null) {
+            <div class="table-row final">
+              <app-add-button-on-final-tr
+                [action]="'add event'"
+                (onAdd)="addNewEvent()"
+              ></app-add-button-on-final-tr>
+            </div>
+          }
+
+        } @else {
+          <div class="table-row final">
+            <app-add-button-on-final-tr
+              (onAdd)="addNewEvent()"
+            ></app-add-button-on-final-tr>
+          </div>
+        }
       </div>
     } @else {
-      No Events
+      NO EVENTS
       <div class="table-row final">
         <app-add-button-on-final-tr
           (onAdd)="addNewEvent()"
