--- a/src/app/shared/scoreboards/admin-forms/all-admin-forms/all-admin-forms.component.html
+++ b/src/app/shared/scoreboards/admin-forms/all-admin-forms/all-admin-forms.component.html
@@ -95,7 +95,7 @@
   <app-events-forms
     [data]="data"
     [eventsFormsVisible$]="eventsFormsVisible$"
-    [events]="allMatchFootballEvents$ | async"
+    [events]="allMatchFootballEventsWithPlayers$ | async"
     [homePlayersInMatch]="homePlayersInMatch$ | async"
     [awayPlayersInMatch]="awayPlayersInMatch$ | async"
   ></app-events-forms>
