--- a/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.html
+++ b/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.html
@@ -1,4 +1,4 @@
-@if (matchId) {
+@if (match && match.match_id) {
   <form
     tuiTextfieldSize="m"
     [formGroup]="eventForm"
@@ -33,15 +33,36 @@
                 }
               </div>
 
-              <!--              EVENT QB-->
+              <!--EVENT TEAM-->
+              <div
+                class="table-cell first"
+              >
+                @if (getFormDataByIndexAndKey(eventFormGroup, i, 'eventId')) {
+                  @if (getEventTeam(eventFormGroup, i, 'eventTeam'); as eventTeam) {
+                    {{ eventTeam.title | uppercase }}
+                  }
+                } @else {
+                  @if (match && match.teams_data && match.teams_data.team_a && match.teams_data.team_b) {
+                    <app-select-team-in-match
+                      [teamsList]="[match.teams_data.team_a, match.teams_data.team_b]"
+                      [control]="getFormControl(
+                                            this.eventForm,
+                                            i,
+                                            'eventTeam',
+                                            'events'
+                                          )"
+                    ></app-select-team-in-match>
+                  }
+                }
+              </div>
+
+              <!--EVENT QB-->
               <div
                 class="table-cell first"
               >
                 @if (getFormDataByIndexAndKey(eventFormGroup, i, 'eventId')) {
                   @if (getEventPlayer(eventFormGroup, i, 'eventQb'); as eventQb) {
                     {{ eventQb.match_player.match_number }} {{ eventQb.person?.second_name | uppercase }}
-                  } @else {
-                    NO PLAYER
                   }
                 } @else {
                   <app-search-player-in-match-autocomplete
