--- a/src/app/shared/scoreboards/admin-forms/events-forms/events-forms.component.html
+++ b/src/app/shared/scoreboards/admin-forms/events-forms/events-forms.component.html
@@ -12,7 +12,7 @@
     @if (data && data.match_id) {
       <app-add-edit-football-event-table
         [events]="events"
-        [matchId]="data.match_id!"
+        [match]="data"
         [homePlayersInMatch]="homePlayersInMatch"
         [awayPlayersInMatch]="awayPlayersInMatch"
       ></app-add-edit-football-event-table>
