match events adding

--- a/src/app/shared/ui/search/search-player-in-match-autocomplete/search-player-in-match-autocomplete.component.html
+++ b/src/app/shared/ui/search/search-player-in-match-autocomplete/search-player-in-match-autocomplete.component.html
@@ -3,7 +3,7 @@
     <tui-combo-box
       formControlName="player"
     >
-      {{ 'search ' | uppercase }} {{ placeholder | uppercase }}
+      {{ action | uppercase }} {{ placeholder | uppercase }}
       @if (players) {
         <tui-data-list-wrapper
           *tuiDataList
