--- a/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.html
+++ b/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.html
@@ -14,6 +14,7 @@
               class="table-row"
               [formGroupName]="i"
             >
+              <!--EVENT NUMBER-->
               <div
                 class="table-cell first"
               >
@@ -23,10 +24,62 @@
                   }
                 } @else {
                   <tui-input-number
+                    [focusable]="false"
+                    [min]="1"
+                    [step]="1"
                     [formControl]="getFormControl(
                         this.eventForm,
                         i,
                         'eventNumber',
+                        'events'
+                      )"
+                  ></tui-input-number>
+                }
+              </div>
+
+              <!--EVENT QTR-->
+              <div
+                class="table-cell first"
+              >
+                @if (getFormDataByIndexAndKey(eventFormGroup, i, 'eventId')) {
+                  @if (getFormDataByIndexAndKey(eventFormGroup, i, 'eventQtr'); as qtr) {
+                    QTR {{ qtr }}
+                  }
+                } @else {
+                  <tui-input-number
+                    [focusable]="false"
+                    [min]="1"
+                    [max]="4"
+                    [step]="1"
+                    [formControl]="getFormControl(
+                        this.eventForm,
+                        i,
+                        'eventQtr',
+                        'events'
+                      )"
+                  ></tui-input-number>
+                }
+              </div>
+
+              <!--BALL ON-->
+              <div
+                class="table-cell first"
+              >
+                @if (getFormDataByIndexAndKey(eventFormGroup, i, 'eventId')) {
+                  @if (getFormDataByIndexAndKey(eventFormGroup, i, 'eventBallOn'); as ballOn) {
+                    BALL ON {{ ballOn }}
+                  }
+                } @else {
+                  <tui-input-number
+                    [focusable]="false"
+                    [min]="-50"
+                    [max]="50"
+                    [step]="1"
+                    (tuiValueChanges)="onBallOnChange($event, i)"
+                    [formControl]="getFormControl(
+                        this.eventForm,
+                        i,
+                        'eventBallOn',
                         'events'
                       )"
                   ></tui-input-number>
@@ -39,11 +92,12 @@
               >
                 @if (getFormDataByIndexAndKey(eventFormGroup, i, 'eventId')) {
                   @if (getEventTeam(eventFormGroup, i, 'eventTeam'); as eventTeam) {
-                    {{ eventTeam.title | uppercase }}
+                    <!--                    {{ eventTeam.title | uppercase }}-->
                   }
                 } @else {
                   @if (match && match.teams_data && match.teams_data.team_a && match.teams_data.team_b) {
                     <app-select-team-in-match
+                      [placeholder]="'offence team'"
                       [teamsList]="[match.teams_data.team_a, match.teams_data.team_b]"
                       [control]="getFormControl(
                                             this.eventForm,
@@ -62,20 +116,67 @@
               >
                 @if (getFormDataByIndexAndKey(eventFormGroup, i, 'eventId')) {
                   @if (getEventPlayer(eventFormGroup, i, 'eventQb'); as eventQb) {
-                    {{ eventQb.match_player.match_number }} {{ eventQb.person?.second_name | uppercase }}
+                    #{{ eventQb.match_player.match_number }} {{ eventQb.person?.second_name | uppercase }}
                   }
                 } @else {
-                  <app-search-player-in-match-autocomplete
-                    [players]="homePlayersInMatch"
-                    [control]="getFormControl(
+                  @if (getEventTeam(eventFormGroup, i, 'eventTeam'); as selectedTeam) {
+                    <!--                    {{ selectedTeam.title }}-->
+                    <app-search-player-in-match-autocomplete
+                      [action]="'select'"
+                      [placeholder]="'qb'"
+                      [players]="getPlayersForSelectedTeam(selectedTeam)"
+                      [control]="getFormControl(
                         this.eventForm,
                         i,
                         'eventQb',
                         'events'
                       )"
-                  ></app-search-player-in-match-autocomplete>
+                    ></app-search-player-in-match-autocomplete>
+                  }
 
                 }
+              </div>
+
+              <!--EVENT DOWN-->
+              <div
+                class="table-cell first"
+              >
+                @if (getFormDataByIndexAndKey(eventFormGroup, i, 'eventId')) {
+                  @if (getFormDataByIndexAndKey(eventFormGroup, i, 'eventDown'); as down) {
+                    {{ down }} &
+                  }
+                } @else {
+                  <tui-input-number
+                    [focusable]="false"
+                    [min]="1"
+                    [max]="4"
+                    [step]="1"
+                    [formControl]="getFormControl(
+                        this.eventForm,
+                        i,
+                        'eventDown',
+                        'events'
+                      )"
+                  ></tui-input-number>
+                }
+                @if (getFormDataByIndexAndKey(eventFormGroup, i, 'eventId')) {
+                  @if (getFormDataByIndexAndKey(eventFormGroup, i, 'eventDistance'); as distance) {
+                    {{ distance }}
+                  }
+                } @else {
+                  <tui-input-number
+                    [min]="1"
+                    [max]="100"
+                    [step]="1"
+                    [formControl]="getFormControl(
+                                        this.eventForm,
+                                        i,
+                                        'eventDistance',
+                                        'events'
+                                      )"
+                  ></tui-input-number>
+                }
+
               </div>
 
 
@@ -94,7 +195,7 @@
                             )
                           "
                     (onSubmit)="
-                            onCreateNewEvent($event.action, $event.index, $event.id)
+                            onSubmitNewEvent($event.action, $event.index, $event.id)
                           "
                     (onCancel)="onCancelButtonClick()"
 
@@ -104,7 +205,7 @@
                 <div class="table-cell actions">
                   <app-actions-buttons
                     [index]="i"
-                    (onSubmit)="onCreateNewEvent($event.action, $event.index, $event.id)"
+                    (onSubmit)="onSubmitNewEvent($event.action, $event.index, $event.id)"
                     (onCancel)="onCancelButtonClick()"
                   ></app-actions-buttons>
                 </div>
